--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Random Image Feed</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <h1>Random Image Feed</h1>
+    <div class="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
